# Image-Processor

./: CMakeLists.txt  bmp.cpp  bmp.h  controller.cpp  controller.h  exception.h  image.cpp  image.h  image_processor.cpp  parser.cpp  parser.h  readme.md
fabrics/: base_fabric.h  blur_fabric.cpp  blur_fabric.h  crop_fabric.cpp  crop_fabric.h  edge_detection_fabric.cpp  edge_detection_fabric.h  gray_scale_fabric.cpp  gray_scale_fabric.h  light_distortion_fabric.cpp  light_distortion_fabric.h  negative_fabric.cpp  negative_fabric.h  sharpening_fabric.cpp  sharpening_fabric.h
filters/: base_filter.cpp  base_filter.h  blur.cpp  blur.h  crop.cpp  crop.h  edge_detection.cpp  edge_detection.h  gray_scale.cpp  gray_scale.h  light_distortion.cpp  light_distortion.h  negative.cpp  negative.h  sharpening.cpp  sharpening.h
